He especificat més d'on es l'arxiu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p><strong>01001100 00110011 01110100 01000111 00110111 01111010 01010001 01110111 00111001 01000010</strong></p>
 
         <p>Utilitza un traductor binari per obtenir la contrasenya i continuar la cerca del tresor!
-        <br>Recorda que hauras de posar la contrasenya al arxiu .rar del meu ordinador</p>
+        <br>Recorda que hauras de posar la contrasenya al arxiu busqueda_del_tresor_part2.rar del meu ordinador</p>
         </p>
     </div>
 </body>
